hard-gists/7622246/run.log
=== Docker Run Log for 7622246 ===
Started at: Mi 29. Okt 17:13:53 CET 2025

[2025-10-29 17:13:54] START: Running container for 7622246
[2025-10-29 17:13:54] SUCCESS: Container 1a298353455462433702389b8aab0a51dc7910e2cf5438a137949cecf197d906 started for 7622246
=== Container logs for 7622246 ===
  File "/snippet.py", line 60
    print "> Getting:", a_site
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7622246 ===
[2025-10-29 17:13:56] INFO: Container 1a298353455462433702389b8aab0a51dc7910e2cf5438a137949cecf197d906 has stopped
